Apex: Fix position of help icon in FieldLayout align=top

--- a/src/themes/apex/layouts.less
+++ b/src/themes/apex/layouts.less
@@ -86,6 +86,7 @@
 			// HACK: This PopupButtonWidget's `height` extends below the header's baseline (with align: top),
 			// causing the field widget to be narrower than it should be. 0.3em chosen experimentally.
 			margin-top: -0.3em;
+			margin-right: -0.625em;
 		}
 	}
 
